[project]
name = "nafnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "future>=1.0.0",
    "lmdb>=2.2.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytorch-wavelets>=1.3.0",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tb-nightly>=2.21.0a20251023",
    "tqdm>=4.67.3",
    "yapf>=0.43.0",
]
